{
    "name": "InputControls",
    "maps": [
        {
            "name": "TouchInput",
            "id": "17d62e5e-5a2d-4993-beab-3c54ed4159cd",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "fc319fe0-8d82-4696-9444-92cbd8e82c98",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.5)"
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "4ccb64f3-0f50-4d86-b2b1-64288b56160f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PrimaryDelta",
                    "type": "PassThrough",
                    "id": "5c07b1ce-726f-4a22-893c-b716881388fe",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2e833394-3a92-4d90-b444-78fe047efc3b",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4921ff47-a46c-411e-924f-4a61ffe29814",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b22084c2-3556-411f-8305-e98f20a98720",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerInput",
            "id": "d2abd70c-251d-4222-9257-1da2a6629f10",
            "actions": [
                {
                    "name": "AttackBasic",
                    "type": "Button",
                    "id": "fc4088e4-bc54-4820-876c-55938076362f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "7344df92-3df8-4e11-82bd-bf36b0940c15",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AttackSkill1",
                    "type": "Button",
                    "id": "36bb675b-5a70-4436-a6b0-9a20561f0dfa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2d2aad5a-b8bb-4d18-b05a-ee245b76767a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackBasic",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ccc2c176-effa-4f0d-92a0-93cbf4929fe6",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackSkill1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6fbdccb-db71-44cb-a916-74b96cb0fe98",
                    "path": "<Joystick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "bdf7f07d-9c46-4598-a993-975105cadfc5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "09f14929-4915-4e7a-b2d1-9f89b6839c05",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9e117c49-ac13-4815-b918-9d32bd8ee81f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "92bbdf24-33e5-4302-aae5-959b5707c41c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7fc5b320-ad6d-417c-ae85-767eed58df35",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "SensorInput",
            "id": "fc7013a2-b770-41c9-958d-dd08844507d7",
            "actions": [
                {
                    "name": "Accelerometer",
                    "type": "Value",
                    "id": "98051792-ed0a-4df5-9138-a94ca163c6f9",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "979b2513-d498-4e0e-b910-5503a0487d66",
                    "path": "<Accelerometer>/acceleration",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accelerometer",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}